syntax = "proto3";

package su;

message PersionData {
  int64        Id = 1;
  string       PhoneNumber = 2;
  string       Password = 3;
  string       UniqueId = 4;
  string       Number = 5;
  string       Email = 6;
  string       Gender = 7;
  string       Name = 8;
  int64        RoleType = 9;
  int64        State = 10;
  string       CreateTime = 11;
  string       UpdateTime = 12;
}

message PersionAddReq {
  PersionData Data = 1;
}

message PersionAddResp {
  bool   Result = 1;
}

message PersionListReq {
  int64 Current = 1;
  int64 PageSize = 2;
}


message PersionListResp {
  int64 Total = 1;
  repeated  PersionData list = 2;
}

message PersionUpdateReq {
  PersionData Data = 1;
}

message PersionUpdateResp {
  bool   Result = 1;
}

message PersionDeleteReq {
  int64 Id = 1;
}

message PersionDeleteResp {
  bool   Result = 1;
}


message RoleData {
  int64        Id = 1;
  string       RoleName = 2;
  string       Remark = 3;
  string       CreateTime = 4;
  string       UpdateTime = 5;
}



message RoleAddReq {
  RoleData Data = 1;
}

message RoleAddResp {
  bool   Result = 1;
}

message RoleListReq {
  int64 Current = 1;
  int64 PageSize = 2;
}


message RoleListResp {
  int64     Total = 1;
  repeated  RoleData List = 2;
}

message  AllRoleReq{

}

message  AllRoleResp{
  int64     Total = 1;
  repeated  RoleData List = 2;
}

message RoleUpdateReq {
  RoleData Data = 1;
}

message RoleUpdateResp {
  bool        Result = 1;
}

message RoleDeleteReq {
  int64 Id = 1;
}

message RoleDeleteResp {
  bool   Result = 1;
}



message PersionLoginReq {
  string PhoneNumber = 1;
  string Password = 2;
}

message PersionLoginResp {
    PersionInfo Data = 1;
}

message PersionRegisterReq {
  string  PhoneNumber = 1;
  string  Password = 2;
  string  Number = 3;
  string  Email = 4;
  string  Gender = 5;
  string  Name = 6;
  int64   RoleId = 7;
  string  class = 8;
  string  academy = 9;
  string  school = 10;
  string  grade = 11;


}

message PersionRegisterResp {
  bool Result = 1;
}


message PersionInfo{
  int64        Id = 1;
  string       PhoneNumber = 2;
  string       UniqueId = 3;
  string       Number = 4;
  string       Email = 5;
  string       Gender = 6;
  string       Name = 7;
  int64        State = 8;
  string       CreateTime = 9;
  int64        roleId = 10;
  string       roleName = 11;
  string       class = 12;
  string       academy = 13;
  string       school = 14;
  string       grade = 15;

}


message PersionInfoReq {
  int64 Id = 1;
}

message PersionInfoResp {
    PersionInfo Info = 1;
}

message SubjectInfo {
  int64        Id = 1;
  string       Uuid  = 2;
  string       Name   = 3;
  int64        Status   = 4;
  string       Code   = 5;
  int64        MaxPersion   = 6;
  int64        MainTeacherId   = 7;
  int64        AssistantTeacherId   = 8;
  string       Introduce   = 9;
  string       Backup   = 10;
  string       CreateTime   = 11;
  string       UpdateTime   = 12;
  string       DeleteTime   = 13;
}

message SubjectAddReq{
  SubjectInfo RoleData = 1;
}

message SubjectAddReap{
  bool Result = 1;
  SubjectInfo RoleData = 2;
}

message MainTeacherSubjectListReq{
  int64 Id = 1;
}
message MainTeacherSubjectListReap{
  int64     Total = 1;
  repeated  SubjectInfo List = 2;
}




service Us {
  rpc PersionAdd(PersionAddReq) returns(PersionAddResp);
  rpc PersionList(PersionListReq) returns(PersionListResp);
  rpc PersionUpdate(PersionUpdateReq) returns(PersionUpdateResp);
  rpc PersionDelete(PersionDeleteReq) returns(PersionDeleteResp);


  rpc RoleAdd(RoleAddReq) returns(RoleAddResp);
  rpc RoleList(RoleListReq) returns(RoleListResp);
  rpc RoleUpdate(RoleUpdateReq) returns(RoleUpdateResp);
  rpc RoleDelete(RoleDeleteReq) returns(RoleDeleteResp);
  rpc AllRoles(AllRoleReq) returns(AllRoleResp);

  rpc PersionLogin(PersionLoginReq) returns(PersionLoginResp);
  rpc PersionRegister(PersionRegisterReq) returns(PersionRegisterResp);

  rpc PersionInfo(PersionInfoReq) returns(PersionInfoResp);

}
